--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.20",
+    "leaflet": "^1.9.4",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
