--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,26 +22,26 @@
     ],
     "baseUrl": ".",
     "paths": {
+      // General Aliases
       "@/*": ["./src/*"], 
       "@/lib/*": ["./src/lib/*"],
       
-      // FIX: Use a wildcard (*) in the alias key to allow multiple target paths.
-      // The compiler will check these paths in order.
-      // The first matching path is used.
+      // FIX: The alias key uses '/*'. The target paths MUST also use '/*'.
+      // This tells the compiler that the remaining string from the import (e.g., 'pricing_engine') 
+      // should be appended to the target path.
       
       "@/logic/pricing/*": [
-        "src/lib/private/pricing_engine.ts", // Local/Private Logic (Priority 1)
-        "src/lib/private_stubs/pricing_engine.ts" // Public Stub (Priority 2)
+        "src/lib/private/*", // FIX: Changed from .ts file name to a directory wildcard
+        "src/lib/private_stubs/*" // FIX: Changed from .ts file name to a directory wildcard
       ],
       
       "@/logic/validation/*": [
-        "src/lib/private/complex_validation.ts", // Local/Private Logic (Priority 1)
-        "src/lib/private_stubs/complex_validation.ts" // Public Stub (Priority 2)
+        "src/lib/private/*", // FIX: Changed from .ts file name to a directory wildcard
+        "src/lib/private_stubs/*" // FIX: Changed from .ts file name to a directory wildcard
       ]
     }
   },
   
-  // These arrays are correctly placed outside of compilerOptions
   "include": [
     "next-env.d.ts", 
     "**/*.ts", 
